finished a lot of stuff

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
         <!--Hole select dropdown-->
         <label for="holes">Holes:</label>
-        <select name="holes" id="holes-select-element" onchange="selectHoles()">
-          <option value="9" selected>Select</option>
+        <select name="holes" id="holes-select-element" onchange="selectHoles(event)">
+          <option value="9">Select</option>
           <option value="9">9</option>
           <option value="18">18</option>
         </select>
